fixed text alignment issue with radio and checkboxes added support for `solid-button` class

--- a/assets/styles/framework/_buttons.scss
+++ b/assets/styles/framework/_buttons.scss
@@ -77,20 +77,22 @@
     border: 1px solid darken($button-main-color, $percentage-darkest);
   }
 
-  &:hover {
+  &:not(.solid-color) {
+    &:hover {
 
-    &.quiet {
-      color: $button-text-color;
+      &.quiet {
+        color: $button-text-color;
+      }
+
+      &:not([disabled]) {
+          background-color: darken($button-main-color, $percentage-dark);
+      }
     }
 
-    &:not([disabled]) {
-        background-color: darken($button-main-color, $percentage-dark);
-    }
-  }
-
-  &:active, &.is-active {
-    &:not([disabled]) {
-        background-color: darken($button-main-color, $percentage-dark);
+    &:active, &.is-active {
+      &:not([disabled]) {
+          background-color: darken($button-main-color, $percentage-dark);
+      }
     }
   }
 }
