--- a/assets/styles/framework/_variables.scss
+++ b/assets/styles/framework/_variables.scss
@@ -438,7 +438,7 @@ $padding-input: 4px !default;
 $opacity-disabled-input: .7 !default;
 $margin-label: 0 0 3px 0 !default;
 $box-shadow-focused-input: 0 0 4px $border-color-notice !default;
-$height-select: 25px !default;
+$height-select: 19px !default;
 $background-color-input: $color-white !default;
 $width-text-input: 100% !default;
 $margin-radio-checkbox: 3px !default;
